data/all_generated_tests/raw_wast_tests/br_if_TypeMismatchinControlFlowInstructions_1849.wast
;; 10. **Test 10: Backward Branch to Loop with Mismatched Types**     - **Description**: Use `br_if` to branch back to the start of a loop with operand types that do not match the loop's expected input types.     - **Constraint Checked**: Validate proper type-checking for operands used in backward branching.     - **Relation to Type Mismatch**: Ensures loop's operand type consistency, preventing runtime errors.

(assert_invalid
  (module
    (func $backward-branch-type-mismatch
      (loop (result i32)
        (i32.const 42)
        (br_if 0 (i64.const 1))
        (drop)
      )
    )
  )
  "type mismatch"
)